[package]
name = "tree-sitter-mbx"
description = "Moonbit + Html (JSX-like) parser"
version = "0.1.0"
authors = ["Arcelyth <arcelyth@tutamail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "mbx"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/arcelyth/tree-sitter-mbx"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
